<resources>
    <string name="app_name">To-Do-List</string>
    <string name="action_settings">Settings</string>
    <string name="high_priority">High</string>
    <string name="medium_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="caption_hint">Caption of your task</string>
    <string name="definition_hint">Describe your task</string>
    <string name="btn_add_text">Add</string>
</resources>
