<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/et_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLines="4"
        android:hint="@string/caption_hint" />

    <EditText
        android:id="@+id/et_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:hint="@string/definition_hint"
        app:layout_constraintLeft_toLeftOf="@id/et_caption"
        app:layout_constraintTop_toBottomOf="@id/et_caption"
        android:maxLines="12"
        android:inputType="textMultiLine"/>

    <RadioGroup
        android:id="@+id/rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@id/et_definition"
        app:layout_constraintTop_toBottomOf="@id/et_definition">

        <RadioButton
            android:id="@+id/rb_priority_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/high_priority"
            android:theme="@style/WhiteRadioButton"
            android:background="@color/red"/>

        <RadioButton
            android:id="@+id/rb_priority_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/medium_priority"
            android:theme="@style/WhiteRadioButton"
            android:background="@color/yellow"/>

        <RadioButton
            android:id="@+id/rb_priority_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/low_priority"
            android:theme="@style/WhiteRadioButton"
            android:background="@color/green"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#FFFF"
        android:background="@color/colorPrimary"/>

</android.support.constraint.ConstraintLayout>